Current Release
- Added username flag for dnszoneimporter
- Added check to see if there are changes in the database before exporting
- Database now being dumped every time the tree exporter is run
- Made ExportAllBindTrees export to a single tar.bz2 file

2010-03-03 release-0.12
- Reordered records in zone_importer_lib so SOA comes first
- Fixed bug that was making an extra any view dependency in zone_importer_lib
- Added duplicate record checking in zone_exporter_lib
- Fixed tree exporter to work with new acl_range table
- Added ipv6 support to zone_importer for both forward and reverse zones
- Fixed the install_requires in setup.py.

2010-01-27 release-0.11
- Added missing named conf error in tree_exporter.py
- Added missing soa record error in zone_exporter.py
- Added sane defaults in dnslstreexport
- Fixed tree_exporter skipping certain records
- Fixed view/zone combination in tree_exporter
- Added soa in any view error in zone_exporter
- Fixed tree exporter file locations
- Fixed dnsconfigsync config file location
- Fixed view dependency conversion in the tree exporter

2009-12-18 release-0.10

2009-12-09 release-0.9

2009-12-07 release-0.8

2009-11-16 release-0.7
- Added MANIFEST to fix install problems.

2009-11-16 release-0.6

2009-09-23 release-0.5
- Made trunk install as 0.1
- Fixed current_version variable in setups
- Fixed tree exporter mixing up 'acl_name' and 'acl_cidr_block'
- Fixed tree exporter redefining "any" acl
- Fixed duplicate server names in tree exporter
- Made dnsconfigsync restart bind after syncing
- made dnsconfigsync tell what is going on
- Added dnscheckconfig
- Fixed dnscheckconfig error handling and file handling
- Added dnsexportconfig, updated setup